--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 layout: index
 title: ascent-dt
 tagline: Bootstrap 4 UI kit for Jekyll
-css: 
+css: style.css
 js: sliders.js
 keywords: helium, jekyll, bootstrap, UI, kit
 canonical: https://ascent-dt.github.io
 ---
+<head>
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
 {% include JB/setup %}
 <!-- Content Area Start -->
 <div id="content">
